2007-11-24  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.22.

2007-10-31  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Fix decorate/undecorate actions with OpenBox (thanks Rafał Mużyło)

2007-10-08  Ross Burton  <ross@burtonini.com>

	* devilspie.1:
	Fix typos spotted by Loïc Minier.

2007-09-23  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.21.

2007-09-23  Ross Burton  <ross@burtonini.com>

	* src/sexp-test.c:
	Add a loop variable to keep the quit action happy.

2007-09-23  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Handle wnck_screen_get_active_workspace() failing by then trying
	to get the 0th workspace.  Also clean up func_center a
	little. (#343546).

2007-07-04  Ross Burton  <ross@burtonini.com>

	* src/actions.[ch]:
	* src/parser.c:
	Add change_workspace, to change the active workspace (#453464,
	thanks Adam Więckowski).

2007-06-22  Ross Burton  <ross@burtonini.com>

	* src/actions.c:
	Refactor decorate and undecorate.

2007-06-22  Ross Burton  <ross@burtonini.com>

	* devilspie.1:
	* src/actions.[ch]:
	* src/parser.c:
	Add "decorate" action, the opposite of "undecorate".

	Thanks Galkin Vasily, #449634.

2007-03-28  Ross Burton  <ross@burtonini.com>

	* src/devilspie.c:
	Display the version in --help.

2007-03-12  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Remove AM_MAINTAINER_MODE.

2007-01-29  Ross Burton  <ross@burtonini.com>

	* src/devilspie.[ch]:
	Make the GMainLoop publically available.
	
	* src/actions.[ch]:
	* src/parser.c:
	Add a quit action, thanks Leon Zhang.

2007-01-29  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.20.2.

2007-01-29  Ross Burton  <ross@burtonini.com>

	* src/matches.c:
	Fix window_workspace (thanks Andrew Yates).

2007-01-12  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.20.1.

2007-01-12  Ross Burton  <ross@burtonini.com>

	* src/parser.c: